# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog][keepachangelog],
and this project adheres to [Semantic Versioning][semver].

## [Unreleased]
## [1.1.2] - 2019-05-10
### Changed
- Update software versions of complete mail server.
### Fixed
- Fix error that would cause the API to still use SSL if TLS keys were
  given, even if API_USE_HTTPS was set to false.
- Fix error that would prevent the generation of new DKIM keys.

## [1.1.1] - 2019-01-27
### Fixed
- Fix an error that would cause the configuration files to be inside a
  subfolder and hence hidden from the services.

## [1.1.0] - 2019-01-27
### New
- Add USE_OWN_SETTINGS environment variables to enable users to prevent
  the container to overwrite any value in any service configuration file.

### Changed
- The container will now write the environment variables into the the
  different service configuration files on every start up.
  If you provide your own configuraton files, use the new
  USE_OWN_SETTINGS environment variable, to prevent that.

### Fixed
- Fixed error that would cause some of the user-set environment
  variables to be reset to their default value because of an 'invalid'
  value.
- Set the default value of the API_USE_HTTPS environment variable to
  true as stated in the [README][readme].

## [1.0.0] - 2018-08-31
### New
- The docker container contains a fully fledged email system based on
  modern technology.
- System is configurable using environment variables and API.
- Add a cute logo for the project (Huge thanks to the noun project at
  this place).
- License the project under the european union public license. See
  [LICENSE][github-license] for more information on that.
- Describe all possible environment variables in the
  [README.md][readme] file.

[keepachangelog]: https://keepachangelog.com/en/1.0.0/
[semver]: https://semver.org/spec/v2.0.0.html